2011-10-05  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-clear-repl-variables): New function, clears *, /,
	and + variables.
	(slime-repl-clear-buffer-hook): Add `slime-clear-repl-variables'
	to it, now C-c M-o clears variables, allowing bound objects to be GCed.

2011-10-05  Anton Kovalenko  <anton@sw4me.com>

	* swank-asdf.lisp (asdf-system-directory): preserve
	pathname-device and use NAMESTRING for final conversion, so both
	device and directory are passed to SLIME. It is required e.g. on
	MS Windows with implementations using PATHNAME-DEVICE for drive
	letters (SBCL); intended to be portable and useful on every
	platform where DEVICE is important.

2011-10-01  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-repl-set-package): Don't redisplay the
	prompt if it doesn't change.

2011-10-01  Stas Boukarev  <stassats@gmail.com>

	* slime-fuzzy.el (slime-fuzzy-done): Fix completion in the minibuffer.

2011-10-01  Stas Boukarev  <stassats@gmail.com>

	* swank-asdf.lisp (xref-doit): Guard against using on things
	other than symbols and strings. slime-edit-uses may call it on
	(setf function), and it'll pop into the debugger.
	Report by Bart Botta.

2011-09-12  Christophe Rhodes  <csr21@cantab.net>

	* slime-media.el (slime-dispatch-media-event): allow swank to
	popup a buffer with a given name, mode and contents.  Intended to
	support display of information formatted by the inferior process
	as a return value: in particular, R help_files_with_topic objects.

2011-09-01  Anton Kovalenko  <anton@sw4me.com>

	* slime-c-p-c.el (slime-complete-symbol*-fancy-bit): "imitate" a
	close-paren, or a space, with exec-kbd-macro instead of inserting
	them. Makes slime-complete-symbol*-fancy compatible with paredit
	and probably other smart or "electric" stuff that could be bound
	to these keys.

2011-08-30  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-repl.el	(slime-repl-suppress-prompt): New variable. Bind to T to